--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Configure Pages
+        id: pages
+        uses: actions/configure-pages@v5
+
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
